# feather-build-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
class_file/: Cargo.toml
class_file/src/: class_constants.rs  jstring.rs  lib.rs  macros.rs  simple_class_writer.rs
class_file/src/class_reader/: labels.rs  pool.rs
class_file/src/tree/: attribute.rs  class.rs  descriptor.rs  field.rs  mod.rs  type_annotation.rs  version.rs
class_file/src/tree/method/: code.rs
class_file/src/visitor/: annotation.rs  class.rs  field.rs  method.rs  mod.rs  record.rs
class_file/src/visitor/implementations/: infallible.rs  mod.rs  tree.rs  unit_tuple.rs
class_file/src/visitor/simple/: mod.rs
duke/: Cargo.toml
duke-macros/: Cargo.toml
duke-macros/src/: lib.rs  names.rs
duke-macros/tests/: simple.rs
duke/src/: class_constants.rs  class_reader.rs  jstring.rs  lib.rs  macros.rs  simple_class_writer.rs
duke/src/class_reader/: pool.rs
duke/src/simple_class_writer/: labels.rs  pool.rs
duke/src/tree/: annotation.rs  attribute.rs  class.rs  descriptor.rs  field.rs  method.rs  mod.rs  module.rs  record.rs  type_annotation.rs  version.rs
duke/src/tree/method/: code.rs
duke/src/visitor/: annotation.rs  attribute.rs  class.rs  mod.rs
duke/src/visitor/implementations/: infallible.rs  tree.rs  unit_tuple.rs
duke/src/visitor/method/: code.rs
duke/src/visitor/simple/: class.rs
duke/tests/: descriptors.rs  names.rs
dukebox/: Cargo.toml
dukebox/src/: lazy_duke.rs  lib.rs  merge.rs  parsed.rs  remap.rs  storage.rs  zip.rs
dukebox/src/storage/: file_attrs.rs  is_class.rs  is_other.rs  jar.rs  jar_entry.rs  lazy_class_file.rs  opened_jar.rs  parsed.rs  zip_file.rs  zip_impls.rs  zip_mem_named.rs  zip_mem_unnamed.rs
dukebox/src/zip/: both.rs  file.rs  mem.rs
dukemakemc/: Cargo.toml  run.sh
dukemakemc/javasrc/dukemakemc/: Main.java
dukemakemc/javasrc/dukemakemc/compilation/: DiagnosticListenerImpl.java  FileManagerImpl.java  JavaInputFileImpl.java  JavaOutputFileImpl.java
dukemakemc/javasrc/dukemakemc/packet/: Connection.java  Packet.java
dukemakemc/javasrc/dukemakemc/util/: ByteBufferInputStream.java  ByteBufferOutputStream.java  CharBufferReader.java  FileObjectPath.java  ResizingByteBuffer.java  ThrowableHelper.java  UriBox.java  UriHelper.java
dukemakemc/src/: main.rs
dukemakemc/testprojects/hello-world/src/foo/: Bar.java
dukemakemc/testprojects/hello-world/src/org/example/: FizzBuzz.java  Main.java
dukenest/: Cargo.toml
dukenest/src/: io.rs  lib.rs  nest.rs  nester_jar.rs  nester_run.rs  nests_mapper_run.rs
mappings_rw/: Cargo.toml
mappings_rw/src/: lib.rs  tiny_v2.rs  tiny_v2_diff.rs
mappings_rw/src/action/: apply_diff.rs  merge.rs  remove_dummy.rs
mappings_rw/src/tree/: mappings.rs  mappings_diff.rs  mod.rs
mappings_rw/src/tree/action/: apply_diff.rs  extend_inner_class_names.rs  merge.rs  mod.rs  remapper.rs  remove_dummy.rs  reorder.rs
mappings_rw/src/tree/action/test/: merge_input_b.tiny  remove_dummy_output.tiny
mappings_rw/tests/: apply_diff.rs  extend_inner_class_names.rs  extend_inner_class_names_output.tiny  merge.rs  remapper.rs  remove_dummy.rs
maven_dependency_resolver/: Cargo.toml
maven_dependency_resolver/src/: coord.rs  lib.rs  maven_pom.rs  maven_pom_done.rs  resolver.rs  tree.rs
quill/: Cargo.toml
quill/src/: action.rs  enigma_dir.rs  enigma_file.rs  lib.rs  lines.rs  remapper.rs  tiny_v2.rs  tiny_v2_diff.rs  tiny_v2_line.rs
quill/src/action/: apply_diff.rs  diff_mappings.rs  extend_inner_class_names.rs  insert_dummy.rs  merge.rs  remove_dummy.rs  reorder.rs
quill/src/tree/: mappings.rs  mappings_diff.rs  mod.rs
quill/src/tree/mappings_diff/: action.rs
quill/tests/: enigma_dir.rs  extend_inner_class_names.rs  merge.rs  merge_input_a.tiny  read_file_input_enigma.txt  read_file_input_tiny_v2.txt  remapper.rs  remove_dummy.rs  reorder.rs  reorder_input.tiny
quill/tests/enigma_dir/org/example/foo/: SimpleClass.mapping
quill/tests/enigma_dir/org/example/foo/bar/: ComplexClass.mapping
quill/tests/enigma_dir/org/example/foo/bar/baz/: nonEnigmaFile.txt
raw_class_file/: Cargo.toml
raw_class_file/src/: lib.rs  macros.rs
raw_class_file/tests/: simple.rs
src/: build.rs  dukelaunch.rs  insert_mappings.rs  jar.rs  main.rs  nester_run.rs  sus.rs  tree.rs  version_graph.rs
src/download/: maven_metadata.rs  mod.rs  version_details.rs  version_manifest.rs  versions_manifest.rs
src/jar/: merge.rs
src/reader/: diff.rs  mod.rs  tiny_v2.rs  tiny_v2_diff.rs  tiny_v2_line.rs  tiny_v2_old.rs  tree.rs
src/specialized_methods/: mod.rs
src/specialized_methods/class_file/: access.rs  mod.rs  name.rs
src/specialized_methods/class_file/attribute/: code.rs  mod.rs
src/specialized_methods/class_file/cp/: attribute.rs  mod.rs
src/specialized_methods/class_file/instruction/: mod.rs  opcode.rs
src/specialized_methods/class_file/pool/: mod.rs
src/specialized_methods/test/: SpecializedMethods.java
src/tiny/: mod.rs  v2.rs  v2_diff.rs
src/tiny/diff/: class_diff.rs  diffs.rs  field_diff.rs  javadoc_diff.rs  method_diff.rs  mod.rs  parameter_diff.rs
src/tiny/tree/: class_mapping.rs  field_mapping.rs  javadoc_mapping.rs  mappings.rs  method_mapping.rs  mod.rs  parameter_mapping.rs
src/tree/: access_flags.rs  actions.rs  descriptor.rs  mappings.rs  mappings_diff.rs  mod.rs  remapper.rs
src/tree/action/: apply_diff.rs  extend_inner_class_names.rs  merge.rs  mod.rs  remapper.rs  remove_dummy.rs  reorder.rs
src/tree/action/test/: extend_inner_class_names_input.tiny  merge_output.tiny  remap_input.tiny  remove_dummy_input.tiny
src/tree/test/: reorder_output.tiny
src/writer/: mod.rs
tests/version-graph/expected/: 1.1~server-0.1.tiny  1.2~server-0.2.tiny  1.4~server-0.4.tiny  1.5.tiny
tests/version-graph/graph/: 1.2~server-0.2#1.1~server-0.1.tinydiff  1.3#1.2~server-0.2.tinydiff  1.3#1.4~server-0.4.tinydiff  1.3.tiny  1.4~server-0.4#1.5.tinydiff
