[workspace]
members = [
	"class_file_v1",
	"class_file_v2",
	"raw_class_file",
]

[package]
name = "feather-build-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }

petgraph = "0.6.4"
indexmap = "2.0.2"

tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11.22"

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"

bytes = "1.5.0"
zip = "0.6.6"

class_file_v1 = { path = "class_file_v1" }
class_file_v2 = { path = "class_file_v2" }

[dev-dependencies]
raw_class_file = { path = "raw_class_file" }
