[workspace]
members = [
	"duke",
	"dukebox",
	"quill",
	"raw_class_file"
]

[package]
name = "feather-build-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }

petgraph = "0.6.4"
indexmap = "2.0.2"

tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11.22"

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
serde-xml-rs = "0.6.0"

bytes = "1.6.0"
zip = "2.1.2"

# TODO: move to dev-dependencies at some point again
pretty_assertions = "1.4.0"

duke = { path = "duke" }
dukebox = { path = "dukebox" }
quill = { path = "quill" }

[dev-dependencies]
raw_class_file = { path = "raw_class_file" }
