[workspace]
members = [
	"duke",
	"dukebox",
	"dukenest",
	"maven_dependency_resolver",
	"quill",
	"raw_class_file"
]

# default version for dependencies
[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-recursion = "1.1.1"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
fern = "0.6.2" # the logging implementation
indexmap = "2.0.2"
java_string = "0.1.2"
log = "0.4.22"
petgraph = "0.6.4"
pretty_assertions = "1.4.0"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
serde-xml-rs = "0.6.0"
tokio = { version = "1.33.0", features = ["full"] }
zip = "2.1.3"

# crates from workspace
duke = { path = "duke" }
dukebox = { path = "dukebox" }
dukenest = { path = "dukenest" }
maven_dependency_resolver = { path = "maven_dependency_resolver" }
quill = { path = "quill" }
raw_class_file = { path = "raw_class_file" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
#unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "warn"
missing_safety_doc = "forbid"
undocumented_unsafe_blocks = "forbid"
unwrap_used = "warn"
#panic = "warn"
# can't use this, it complains about tests
#panic_in_result_fn = "warn"

[package]
name = "feather-build-rs"
version = "0.1.0"
authors = ["zeichenreihe"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/zeichenreihe/feather-build-rs/"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
fern = { workspace = true }
indexmap = { workspace = true }
java_string = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }

duke = { workspace = true }
dukebox = { workspace = true }
dukenest = { workspace = true }
maven_dependency_resolver = { workspace = true }
quill = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
raw_class_file = { workspace = true }
