[package]
name = "duke-macros"
version = "0.1.0"
authors = ["zeichenreihe"]
edition = "2021"
repository = "https://github.com/zeichenreihe/feather-build-rs/"
license = "EUPL-1.2"

[lib]
proc-macro = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
java_string = { workspace = true }
pretty_assertions = { workspace = true }

duke = { workspace = true }
