[package]
name = "dukebox"
version = "0.1.0"
authors = ["zeichenreihe"]
edition = "2021"
repository = "https://github.com/zeichenreihe/feather-build-rs/"
license = "EUPL-1.2"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
zip = { workspace = true }

duke = { workspace = true }
quill = { workspace = true }

#[dev-dependencies]
# TODO: move to dev-dependencies at some point again
pretty_assertions = { workspace = true }
