[package]
name = "dukenest"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indexmap = "2.0.2"

duke = { workspace = true }
dukebox = { workspace = true }
quill = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
