[package]
name = "maven_dependency_resolver"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true } # need this for recursion on async functions
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde-xml-rs = { workspace = true } # for reading poms from xml
tokio = { workspace = true } # for testing async functions
