[package]
name = "quill"
version = "0.1.0"
authors = ["zeichenreihe"]
edition = "2021"
repository = "https://github.com/zeichenreihe/feather-build-rs/"
license = "EUPL-1.2"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true }
java_string = { workspace = true}

duke = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
