[package]
name = "raw_class_file"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }